fix z-index error

--- a/app/static/style/confirmation_modal.css
+++ b/app/static/style/confirmation_modal.css
@@ -42,7 +42,7 @@
 /* The Modal (background) */
 .my_modal {
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 10; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
